<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CJTDActivity!</string>
    <string name="app_name">Tower Defense!!!</string>
    <string name="Hard">Hard</string>
    <string name="Normal">Normal</string>
    <string name="Easy">Easy</string>
    <string name="New">New</string>
    <string name="quit">Quit</string>
    <string name="Play">Play</string>
    <string name="SkillTree">Skill Tree</string>
    <string name="Medals">Medals</string>
    <string name="Store">Store</string>
    <string name="victory">Victory Test</string>
    <string name="defeat">Defeat Test</string>
    <string name="multiwave">Multiwave/Tower Building Test</string>
    <string name="wavetip">Hit the menu button to start a new wave (this needs to be done for the first wave in the game)</string>

</resources>